Feat: - Update Product domain with many variants - Update UI for variants selection - Add vendor management API and UI